# EvilCandy

./: .gitignore  AGENTS.md  AUTHORS  COPYING  Documentation.rst  Makefile  Makefile.am  README  ROADMAP.md  Tutorial.rst  builtin.c  c_coding_style.md  cleanup.sh  configure.ac  demo.tpl  egq.h  err.c  eval.c  exec.c  file.c  headercheck.sh  helpers.c  lex.c  literal.c  main.c  op.c  source_tree_layout.txt  symbol.c  to-do.txt  token.c
.github/workflows/: docs.yml
Documentation/: Tutorial.rst  conf.py  contents.rst  evc_lexer.py  index.rst
Documentation/_static/css/: custom.css
Documentation/langref/: data.rst  filespec.rst  index.rst  tokens.rst
Documentation/libref/: index.rst
Documentation/tutorial/: classes_and_namespaces.rst  data_types.rst  getting_started.rst  index.rst  modules_and_imports.rst  program_flow.rst  scope.rst
demos/: 1.egq  2.egq  box.evc  box2.evc  cat.egq  cat.evc  class_adventure.evc  composition.evc  demo.egq  dog_cat.evc  format.egc  generator.evc  iife.egq  joinsplit.egq  loadargs.evc  primes.egq  primes.evc  sanity.evc  sqrt.egq  test_def.egq  text_adventure.evc
demos/simple_benchmarks/: sqrt.egq
demos/socket/: client_tcp.evc  client_udp.evc  realdumbcurl.evc  server_tcp.evc  server_udp.evc
demos/weird/: README  box2.evc  demo.egq  format.evc  test_def.egq
etc/: Makefile  evilcandy.1  evilcandy_highlight.c  thought_bucket.txt
inc/: buffer.h  compiler.h  debug.h  egq.h  evcenums.h  evilcandy.h  global.h  hash.h  hashtable.h  helpers.h  instructions.h  iterator.h  objtypes.h  opcodes.h  string_reader.h  string_writer.h  stringtype.h  token.h  trie.h  typedefs.h  uarg.h  var.h  vm.h  xptr.h
inc/evilcandy/: assemble.h  config.h  debug.h  disassemble.h  enums.h  err.h  errmsg.h  evc_ctype.h  ewrappers.h  global.h  hash.h  init.h  locations.h  myreadline.h  string_reader.h  string_writer.h  strto.h  typedefs.h  var.h  version.h  vm.h
inc/evilcandy/types/: array.h  bytes.h  cell.h  class.h  dict.h  function.h  generator.h  method.h  number_types.h  property.h  set.h  string.h  tuple.h
inc/internal/: assemble.h  codec.h  cwd.h  err.h  errmsg.h  global.h  import.h  init.h  instruction_name.h  instructions.h  locations.h  op.h  path.h  recursion.h  token.h  type_protocol.h  type_registry.h  uarg.h  vm.h
inc/internal/builtin/: io.h  json.h  sys.h  uuid.h
inc/internal/types/: internal_types.h  number_types.h  sequential_types.h  string.h  xptr.h
inc/lib/: buffer.h  hashtable.h  helpers.h  list.h  utf8.h
inc/tests/: fuzzer_symtab.h  prog_gen.h  strbuf.h  tap.h
lib/: enum.evc  io.evc  math.evc  socket.evc  test.evc
programs/: evilcandy.c  fuzzer.c  rtfuzzer.c  unit_tests.c
src/: Makefile.am  array.c  assemble_post.c  assemble_priv.h  assembler.c  buffer.c  builtin.c  codec.c  compile.c  ctype.c  cwd.c  debug.c  disassemble.c  egq.h  err.c  errmsg.c  eval.c  ewrappers.c  exec.c  expression.c  file.c  find_import.c  frame.c  function.c  global.c  hash.c  hashtable.c  helpers.c  import.c  init.c  instruction_name.c  iterator.c  json.c  keyword.c  lex.c  list.c  list.h  literal.c  load_file.c  location.c  (+26 more)
src/builtin/: builtin.c  builtin.h  file.c  io.c  json.c  math.c  object.c  socket.c  string.c  sys.c  uuid.c
src/types/: array.c  bytes.c  cell.c  class.c  complex.c  dict.c  empty.c  file.c  float.c  floats.c  function.c  generator.c  integer.c  intl.c  method.c  object.c  property.c  range.c  registry.c  set.c  star.c  string.c  string_include.c.h  tuple.c  typehandle.c  types_priv.h  var.h  xptr.c
tests/: regress-binfile-seek-buffer.sh  regress-gh-issue-11.sh  regress-gh-issue-39-tty.sh  regress-textfile-seek-eof.sh  run-evilcandy-tests.sh  sanity.evc  testsuite.evc
tests/c/: README  fuzzer_symtab.c  prog_gen.c  strbuf.c  tap.c
tools/: Makefile.am  gen.c  gen.h  genutil.c  instructions  tokens  tokgen.c
